globus-common (15.5-1+gt6.@distro@) @distro@; urgency=low

  * initializer tweak

 -- Globus Toolkit <support@globus.org>  Wed, 29 Jan 2014 20:35:50 -0500

globus-common (15.4-1+gt6.@distro@) @distro@; urgency=low

  * Tweak initializer

 -- Globus Toolkit <support@globus.org>  Wed, 29 Jan 2014 15:52:44 -0500

globus-common (15.3-1+gt6.@distro@) @distro@; urgency=low

  * Add arch-specific initializer

 -- Globus Toolkit <support@globus.org>  Wed, 29 Jan 2014 11:20:19 -0500

globus-common (15.2-1+gt6.@distro@) @distro@; urgency=low

  * fix missing include of config.h in some .c files

 -- Globus Toolkit <support@globus.org>  Mon, 06 January 2014 12:58:35 -0500

globus-common (15.1-2+gt6.@distro@) @distro@; urgency=low

  * Remove -dev dependency on globus-core

 -- Globus Toolkit <support@globus.org>  Thu, 02 January 2014 14:31:30 -0500

globus-common (15.1-1+gt6.@distro@) @distro@; urgency=low

  * Fix issue with test output
  * Explicitly check for c99 features

 -- Globus Toolkit <support@globus.org>  Fri, 20 December 2013 14:43:55 -0500

globus-common (15.0-1+gt6.@distro@) @distro@; urgency=low

  * First build of version from GT6 branch

 -- Globus Toolkit <support@globus.org>  Thu, 19 December 2013 21:44:50 -0400

globus-common (14.10-1) unstable; urgency=low

  * GT-354: Compatibility with automake 1.13

 -- Globus Toolkit <support@globus.org>  Mon, 18 Mar 2013 09:57:27 -0400

globus-common (14.9-3) unstable; urgency=low

  * Bump Toolkit Version to 5.2.4

 -- Globus Toolkit <support@globus.org>  Mon, 4 Feb 2013 11:55:26 -0500

globus-common (14.9-2) unstable; urgency=low

  * GT-329: globus-version has rc number in debian packages

 -- Globus Toolkit <support@globus.org>  Tue, 4 Dec 2012 10:37:51 -0500

globus-common (14.9-1) unstable; urgency=low

  * GT-288: Deprecate globus_libc_setenv

 -- Globus Toolkit <support@globus.org>  Tue, 09 Oct 2012 10:35:36 -0400

globus-common (14.8-1) unstable; urgency=low

  * GT-264: link error in globus-redia
