@@ -51,7 +51,9 @@ extern const char * _globus_func_name;
  */
 #include <sys/types.h>
 #include <sys/stat.h>
+#if !defined(_WIN32)
 #include <unistd.h>
+#endif
 #include <sys/param.h>
 #include <fcntl.h>
 
@@ -63,7 +65,7 @@ extern const char * _globus_func_name;
 #   include <sys/timeb.h>
 #   include <signal.h>
 #   include <malloc.h>
-#define setenv(var,val,ovw) (((ovw)||!getenv(var))?(putenv(globus_common_create_string("%s=%s",(var),(val)))):0
+#define setenv(var,val,ovw) (((ovw)||!getenv(var))?(putenv(globus_common_create_string("%s=%s",(var),(val)))):0)
 #define unsetenv(var) (putenv(globus_common_create_string("%s=",(var))))
 #else
 #   include <pwd.h>
