@@ -5,7 +5,8 @@ bindir="@bindir@"
 includedir="@includedir@"
 datarootdir="@datarootdir@"
 datadir="@datadir@"
-for arch_specific in "${datadir}/globus-script-initializer."*; do
+libexecdir="@libexecdir@"
+for arch_specific in "${libexecdir}/globus-script-initializer."*; do
     if [ -f "${arch_specific}" ]; then
         . "${arch_specific}"
         if [ -d "$libdir" ]; then
@@ -13,7 +14,6 @@ for arch_specific in "${datadir}/globus-script-initializer."*; do
         fi
     fi
 done
-libexecdir="@libexecdir@"
 sysconfdir="@sysconfdir@"
 sharedstatedir="@sharedstatedir@"
 localstatedir="@localstatedir@"
