@@ -20,7 +20,6 @@ prefix="${GLOBUS_LOCATION-@prefix@}"
 exec_prefix="@exec_prefix@"
 sbindir="@sbindir@"
 bindir="@bindir@"
-libdir="@libdir@"
 includedir="@includedir@"
 datarootdir="@datarootdir@"
 datadir="@datadir@"
